Update antibit description

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -258,8 +258,8 @@ team:
     bio: Batuhan manages the Turkish community, translating annoucements and notices
   antibit:
     name: Antibit
-    title: Russian Community Manager
-    bio: Antibit manages the Russian community, translating annoucements and notices
+    title: Russian-speaking Community Manager
+    bio: Antibit manages the Russian-speaking community, translating annoucements and notices. He has been a crypto enthusiast since 2012, and during this time has accumulated a lot of knowledge and experience regarding cryptocurrencies and blockchain technologies.
   lilking:
     name: Lil-King
     title: Community Manager
