--- a/_i18n/zh-cn.yml
+++ b/_i18n/zh-cn.yml
@@ -105,10 +105,10 @@ download:
   downloadqtm: 下载 macOS 版 Reference 钱包
   downloadqtmarm: 下载 macOS arm64 版 Reference 钱包
   downloadqtl: 下载 Linux 版 Reference 钱包
-  electron: Campfire
-  downloadelectronw: 下载 Windows 版 Campfire 钱包
-  downloadelectronm: 下载 macOS 版 Campfire 钱包
-  downloadelectronl: 下载 Linux 版 Campfire 钱包
+  campfire: Campfire
+  downloadcampfirew: 下载 Windows 版 Campfire 钱包
+  downloadcampfirem: 下载 macOS 版 Campfire 钱包
+  downloadcampfirel: 下载 Linux 版 Campfire 钱包
   downloadmobcamp: Download for Android
   downloadioscamp: Download for iOS
   electrum: Electrum
