--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -30,5 +30,5 @@ jobs:
         uses: rossjrw/pr-preview-action@v1
         with:
           source-dir: _site
-          custom-url: firoorg.github.io/firo-site
+          pages-base-url: firoorg.github.io/firo-site
           
