Add future flag to build process

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,4 +16,4 @@ jobs:
       - name: bundle install
         run: bundle install
       - name: build website
-        run: bundle exec jekyll build
+        run: bundle exec jekyll build --future
