Small bio changes

--- a/_i18n/en.yml
+++ b/_i18n/en.yml
@@ -270,7 +270,7 @@ team:
   navidrahimi:
     name: Navid Rahimi
     title: Developer
-    bio: Navid has a strong background in compiler infrastructure and low-level systems optimization. He holds an MSc in Computer Science from Simon Fraser University and previously worked as a Compiler Engineer at Microsoft. Currently a Core Blockchain Developer at Firo, where he works on protocol-level features including the Lelantus Spark privacy mechanism, full-node performance optimization, consensus verification, and improvements to the P2P and RPC layers to strengthen network stability and security.
+    bio: Navid has a strong background in compiler infrastructure and low-level systems optimization. He holds an MSc in Computer Science from Simon Fraser University and previously worked as a Compiler Engineer at Microsoft. Currently a Core Blockchain Developer at Firo, where he works on protocol-level features including the Lelantus Spark, node performance optimization, consensus verification, and improvements to the P2P and RPC layers to strengthen network stability and security.
   
 roadmap:
   heading: Roadmap
@@ -387,4 +387,5 @@ merchants:
 social:
   community: Community
   findus: You can also find us here
+
 
